V2.2/前端文档/前端开发文档.md
# "一个月完成项目"——前端开发文档

---

| 修订日期   | 版本 | 修订内容                                                     | 修订人 | 审核人 |
| ---------- | ---- | ------------------------------------------------------------ | ------ | ------ |
| 2019-11-29 | v1.0 | 前端详细设计                                                 | 李翼   | zzj    |
| 2020-1-19  | v1.1 | 更改了主页设计，加入新的页面                                 | 刘若尘 | zzj    |
| 2020-3-2   | v2.1 | 更改了主页设计，加入了职业匹配页面。修改了页面流程结构，现在将以类仪表盘的形式展现应用 | 刘若尘 | zzj    |
| 2020-3-9   | v2.2 | 增加了仪表盘主页的内容                                       | 刘若尘 |        |

[toc]



##  1.测试环境：

   

   + 使用外部库：Bootstrap3.3.7,jquery-3.4.1,Echarts,font-awesome-4.7.0
            

## 2. 概要设计

1. 前端流程设计  
    ```mermaid
        graph LR;
            A[大数据职业分析与查询网-首页]--登陆-->B[仪表盘];
            B-.返回首页.->A;
           
    ```
2. 前端业务逻辑
    + 大数据职业分析与查询网-首页以及注册登陆
        + 界面示例展示  
            示例: ![home](D:\T\V2.1\前端文档\home.png)![login](D:\T\V2.1\前端文档\login.png)![register](D:\T\V2.1\前端文档\register.png)![to_dashboard](D:\T\V2.1\前端文档\to_dashboard.png)
            
            ![dashboard](D:\T\V2.2\前端文档\dashboard.png)
            
        + 操作指南：
            &ensp; &ensp; &ensp; &ensp; 用户点击进入["大数据+上海"就业信息网-首页]，浏览首页展示网站基本信息；
            &ensp; &ensp; &ensp; &ensp; 地图显示当前offer在全国的分布，点击登入按钮进入登入页面或进行注册。点击用户连接进入仪表盘。
        
+ 岗位信息页面
        + 界面示例展示  
            示例: ![jobinfo](D:\大三上\曙光\V1.1\前端文档\jobinfo.png)
            + 操作指南：
            &ensp; &ensp; &ensp; &ensp; 查看所选职业的招聘信息总数和详细资料，包含职位名称、招聘公司和薪资待遇；
            &ensp; &ensp; &ensp; &ensp; 点击上方导航栏的“Home按钮即可返回首页；
            &ensp; &ensp; &ensp; &ensp; 点击下方数字列表可展现指定页码的职业信息。
    
+ 薪水统计图表页面
        +  界面示例展示  
            示例: ![stats](D:\T\V2.1\前端文档\stats.png)
            + 操作指南：
            &ensp; &ensp; &ensp; &ensp; 查看所选关键字条件下的薪水统计图表。
    
    + 详细统计页面
    
        + 界面示例展示
    
          示例:![detail](D:\大三上\曙光\V1.1\前端文档\detail.png)
          
          
    
    + 个人信息页面
            + 界面示例展示  
                示例: ![profile](D:\T\V2.1\前端文档\profile.png)
                + 操作指南：
                &ensp; &ensp; &ensp; &ensp; 修改表单内容，并点击Update按钮即可修改个人信息。
        
    + 职业匹配页面
            +  界面示例展示  
                示例: ![jobmatch](D:\T\V2.1\前端文档\jobmatch.png)
                + 操作指南：
                &ensp; &ensp; &ensp;可以直接使用个人信息的简历进行匹配，或者手动输入新的内容进行匹配，点击相对应按钮即可进行匹配。

## 3. 前端详细设计

1. home.html
    + 界面名称：大数据职业分析与查询网-首页
    
    + 功能：浏览首页展示基本信息，用户可选择提交搜索表单任一到服务器；
    
    + 内部逻辑：
        ```mermaid
        graph LR;
            A[用户]--请求-->B[home.html];
            B-.选择筛选结果.->J['登陆/注册'];
            M['仪表盘'];
            J-.点击用户.->M;
            M-.选择.->C[服务器:get_jobinfo模块];
            D[jobinfo.html];
            C-.岗位信息数据.->D;
            M-.提交职业/教育背景等关键字表单.->E[服务器:get_group_statistics模块];
            F[stats.html];
            E-.图表数据.->F;
            M.->G[服务器:detail模块];
            G-.图表数据.->H[detail.html];
        	L['服务器:recommand模块'];
        	M-.输入简历.->L;
        	O['jobmatch.html'];
        	L-.提交.->O;
        	P['服务器:profile模块'];
        	M-.提交修改内容.->P;
        	P-.确定.->N['profile.html'];
        ```
        
    + 组件说明：
    
      	+ 导航栏组件：
    
          + 功能：返回首页按钮
          + URL：/
          + HTTP请求方式：GET
       + 仪表盘首页:
         + 功能:展示总的统计数据
         + /dashboard
         + HTTP请求方式:GET
        + 岗位信息搜索组件：
            + 功能：提交分类统计关键字服务器，并根据URL来获得offer信息。
            + URL: /dashboard/jobinfo/<str:unifyName>/<int:page>
            + HTTP请求方式：GET
        + 薪水统计关键字搜索组件：
            + 功能：提交分类标签到服务器，并根据URL来获得对应的薪水统计。
            + URL: /dashboard/salary/<str:unifyName>
            + HTTP请求方式：GET
       + 详细统计搜索组件:
            + 功能：进入详细统计页面
            + URL:/dashboard/detail
            + HTTP请求方式:GET
       + 登入:
            + 功能:使用户登入
            + URL：/login
            + HTTP请求方式:POST/GET
       + 注册：
            	+ 功能:使用户注册
               	+ URL:/register
               	+ HTTP请求方式:POST/GET
       + 修改用户个人信息：
            + 功能：修改用户个人信息
            + URL：/dashboard/profile
            + HTTP请求方式：POST/GET
       + 职业匹配：
            	+ 功能：职业匹配
               	+ URL：/dashboard/jobmatch
               	+ HTTP请求方式：GET



## 4.JS文件

aj.js:用于ajax请求

pic.js:用于详细统计页面的Echarts画图

common.js:频繁使用函数

login.js:用于处理登陆注册，修改个人信息

recommandJS.js:用于处理职业匹配应用

index.js:用于dashboard首页的Echarts画图

​	